--- a/.github/workflows/docker-build-publish.yaml
+++ b/.github/workflows/docker-build-publish.yaml
@@ -2,7 +2,6 @@ name: Docker Build & Publish
 
 # Trigger on all push events, new semantic version tags, and all PRs
 on:
-  merge_group:
   push:
     branches:
       - "**"
@@ -18,6 +17,6 @@ jobs:
     permissions:
       contents: write
       packages: write
-    uses: Soumyaditya25/.github/.github/workflows/reusable_dockerfile_pipeline.yml@v0.2.8 
+    uses: ./.github/workflows/reusable_dockerfile_pipeline.yml
     with:
       dockerfile: Dockerfile
